# python-rabbitx

./: .cursorignore  .gitignore  .readthedocs.yaml  Makefile  README.md  config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yml
apikey/: __init__.py
docs/: Makefile  api.rst  conf.py  index.rst  requirements.txt  usage.rst
docs/source/: conf.py  usage.rst
examples/: account_onboarding.py  account_positions.py  async_account_positions.py  async_auth_api_key.py  async_auth_wallet.py  async_market_candles.py  async_markets_info.py  async_markets_list.py  async_orders_amend.py  async_orders_cancel.py  async_orders_cancel_all.py  async_orders_create.py  async_orders_list.py  async_ws_connect.py  auth_api_key.py  auth_private_key.py  auth_wallet.py  market_candles.py  markets_info.py  markets_list.py  orders_amend.py  orders_cancel.py  orders_cancel_all.py  orders_create.py  orders_list.py  ws_connect.py
rabbitx/: __init__.py  account.py  apikey.py  client.py  consts.py  eip712.py  markets.py  orders.py  positions.py  private_request.py  profile.py  rabbitx.py  request.py  response.py  signer.py  transport.py  utils.py  vaults.py  wallet.py  xtime.py  xutils.py
rabbitx/ws/: __init__.py  async_ws.py  channel_handler.py  opened_orders.py  orderbook.py  positions.py  ws.py
scripts/: generate_wallet.py  pk_from_mnemonic.py  read_wallet.py
tests/: conftest.py  test_orders.py  test_response.py
utils/: send_message.py  time.py
