[project]
name = "python-rabbitx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "btrees>=6.1",
    "eth-account>=0.13.7",
    "pygments>=2.19.1",
    "requests>=2.32.3",
    "ruff>=0.11.12",
    "websockets>=15.0.1",
]

[tool.ruff]
preview = true
lint.ignore = ["E402"]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]
