[project]
name = "python-rabbitx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "btrees>=6.1",
    "eth-account>=0.13.7",
    "httpx>=0.28.1",
    "pygments>=2.19.1",
    "ruff>=0.11.12",
    "websockets>=15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio",
]

[tool.setuptools]
packages = ["rabbitx"]

[tool.ruff]
preview = true
lint.ignore = ["E402"]
